[gd_scene load_steps=11 format=3 uid="uid://v51lgu8vn4ar"]

[ext_resource type="Script" uid="uid://caopfplohmjrw" path="res://Scripts/robot.gd" id="1_2vrla"]
[ext_resource type="Texture2D" uid="uid://deqktnnfp2t12" path="res://Assets/Characters/Robots/robot_yellowDrive1.png" id="2_7cjo4"]
[ext_resource type="Texture2D" uid="uid://brxa4rx47n2fr" path="res://Assets/Characters/Robots/robot_yellowDrive2.png" id="3_dcvsp"]
[ext_resource type="Texture2D" uid="uid://l6mmhf2mr57h" path="res://Assets/Characters/Robots/robot_blueDrive1.png" id="4_m0m82"]
[ext_resource type="Texture2D" uid="uid://ce6b8y4hcb7l6" path="res://Assets/Characters/Robots/robot_blueDrive2.png" id="5_pwfsi"]
[ext_resource type="Texture2D" uid="uid://cd12ncgp27xtq" path="res://Assets/Characters/Robots/robot_redDrive1.png" id="6_rnk85"]
[ext_resource type="Texture2D" uid="uid://bm4xltg0voxwu" path="res://Assets/Characters/Robots/robot_redDrive2.png" id="7_aseuk"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0xm2m"]
radius = 0.343113
height = 0.774084

[sub_resource type="SpriteFrames" id="SpriteFrames_lp65t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_7cjo4")
}, {
"duration": 1.0,
"texture": ExtResource("3_dcvsp")
}],
"loop": true,
"name": &"collect",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_m0m82")
}, {
"duration": 1.0,
"texture": ExtResource("5_pwfsi")
}],
"loop": true,
"name": &"water",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_rnk85")
}, {
"duration": 1.0,
"texture": ExtResource("7_aseuk")
}],
"loop": true,
"name": &"weed",
"speed": 6.0
}]

[sub_resource type="BoxShape3D" id="BoxShape3D_cvnsp"]
size = Vector3(0.5, 1, 1)

[node name="Robot" type="CharacterBody3D" groups=["Collector"]]
script = ExtResource("1_2vrla")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.125, 0)
shape = SubResource("CapsuleShape3D_0xm2m")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_lp65t")
animation = &"collect"
frame = 1
frame_progress = 0.84808

[node name="HitRight" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0, 0)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitRight"]
shape = SubResource("BoxShape3D_cvnsp")

[node name="HitLeft" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, 0, 0)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitLeft"]
shape = SubResource("BoxShape3D_cvnsp")

[node name="PunchTimer" type="Timer" parent="."]
wait_time = 0.15

[connection signal="body_entered" from="HitRight" to="." method="_on_hit_right_body_entered"]
[connection signal="body_exited" from="HitRight" to="." method="_on_hit_right_body_exited"]
[connection signal="body_entered" from="HitLeft" to="." method="_on_hit_left_body_entered"]
[connection signal="body_exited" from="HitLeft" to="." method="_on_hit_left_body_exited"]
[connection signal="timeout" from="PunchTimer" to="." method="_on_punch_timer_timeout"]
